# gpu-index-api

./: .gitignore  Dockerfile  README.md  alembic.ini  diagram.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: routes.py
app/core/: cache.py  config.py  security.py
app/db/: indexes.py  models.py  session.py
app/schemas/: models.py
app/services/: indexing.py  ingestion.py  pricing.py
docs/: query-tuning.md  request-flow.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_tuning_indexes.py
scripts/: bench_ingest.py  seed.py  tune.py
terraform/: budget.tf  data.tf  ecs.tf  network.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py
tests/integration/: test_api.py  test_edges.py  test_migrations.py
tests/load/: loadtest.py
tests/unit/: test_cache_and_auth.py  test_ingestion_and_ops.py
